# flashcard-generator

./: .gitignore  flake.nix  fmt-src.sh  sentence-generator.cabal
app/: Tatoeba.hs
app/Tatoeba/: Convert.hs  Frequency.hs
src/: MyLib.hs
src/SentGen/Tokenise/: WhiteSpace.hs
